--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 {% include head.html %}
 
-<body style="background-color:lightpink;">
+<body style="background-color:lightcyan;">
 
 
 {% include header.html %}
